--- a/src/components/home.css
+++ b/src/components/home.css
@@ -4,7 +4,7 @@
 .homeH {
   background-color: rgba(110, 1, 1, 0) !important;
   position: absolute;
-  top: 200px;
+  top: 800px;
   left: 20%;
   display: inline;
   border: #5f5f5f 2px solid;
@@ -13,6 +13,7 @@
   padding: 30px;
   text-align: center;
   border-radius: 30px;
+  margin-bottom: 50px;
 }
 
 .bottons {
@@ -31,6 +32,7 @@
   display: inline;
   float: left;
   width: 43.5%;
+  height: 350px;
 }
 
 input {
@@ -38,4 +40,18 @@ input {
   border-radius: 10px;
   border: rgb(156, 156, 156) solid !important;
   padding: 3px;
+}
+
+.cover {
+  height: 750px;
+  background-color: black;
+}
+
+.mainTitle {
+  color: white;
+  position: absolute;
+  top: 350px;
+  margin-left: 650px;
+  letter-spacing: 12px;
+  font-size: 55px;
 }
