some material ui components

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -34,13 +34,13 @@
   width: 43.5%;
   height: 400px;
 }
-
+/* 
 input {
   margin: 10px !important;
   border-radius: 10px;
   border: rgb(156, 156, 156) solid !important;
   padding: 3px;
-}
+} */
 
 
 
