--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+html {
+  overflow-y: scroll;
+}
 
 .App-logo {
   height: 40vmin;
@@ -55,5 +58,3 @@
   margin-left: 7%;
   margin-right: 7%;
 }
-
-
