--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,30 +1,76 @@
 .Header {
-  background-color: #000000 !important;
-  position: absolute;
+  background-color: #191d24 !important;
+  position: fixed;
   display: inline;
   top: 0;
-  padding-left: 35%;
+  padding-left: 25%;
   padding-top: 30px;
   height: 110px !important;
+  z-index: 3;
 }
 
 .name {
   color: #ededed !important;
   position: absolute;
   left: 120px;
-  font-size: 28px !important;
+  font-size: 30px !important;
   letter-spacing: 3px;
   font-weight: bold;
 }
 
-.names {
+.active-names {
+  border: solid 2px #00bba7 !important;
+  border-radius: 12px;
+  color: #00bba7 !important;
+  border-bottom: 2px;
   font-size: 20px !important;
   margin-left: 40px !important;
   letter-spacing: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 2px;
+}
+
+.names {
+  border: solid 2px #191d24 !important;
+  border-radius: 12px;
+  font-size: 20px !important;
+  margin-left: 40px !important;
+  letter-spacing: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 2px;
+}
+
+.names2 {
+  font-size: 20px !important;
+  margin-left: 40px !important;
+  letter-spacing: 2px;
+  left: 80%;
+  position: absolute;
+}
+
+.innerLink {
+  text-decoration: none;
+  color: #393e46;
+}
+
+.menu {
+  margin-top: 50px !important;
+}
+
+.innerLink:hover {
+  color: #00bba7 !important;
 }
 
 .names:hover {
-  color: tomato !important;
+  border: solid 2px #cbf1f594 !important;
+  margin-left: 40px !important;
+  font-size: 20px !important;
+  border-radius: 12px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 2px;
 }
 
 .logout {
