--- a/src/components/home.css
+++ b/src/components/home.css
@@ -42,18 +42,36 @@ input {
   padding: 3px;
 }
 
-
-
 .cover {
-  height: 750px;
-  background-color: black;
+  height: 700px;
+  /* background-color: black; */
+  background-color: #191d24 !important;
 }
 
 .mainTitle {
-  color: white;
+  color: rgba(255, 255, 255, 0.918);
   position: absolute;
-  top: 350px;
-  margin-left: 600px;
+  top: 450px;
+  margin-left: 38%;
   letter-spacing: 12px;
   font-size: 55px;
+}
+
+.img {
+  margin-top: 150px;
+  margin-left: 34.5%;
+  border: none;
+}
+
+.a {
+  text-decoration: none;
+  margin-top: 150px;
+  margin-left: 45%;
+}
+
+.buttn {
+  color: #191d24 !important;
+}
+.buttn:hover {
+  box-shadow: 0px 0px 10px #00bba7;
 }
