--- a/src/components/home.css
+++ b/src/components/home.css
@@ -50,9 +50,9 @@
   border: solid 1px #00bba7 !important;
 }
 
-/* .progress {
+.progress {
   height: 10px !important;
-} */
+}
 
 .bottons {
   border-radius: 10% !important;
