--- a/src/components/home.css
+++ b/src/components/home.css
@@ -104,6 +104,17 @@
   transition-duration: 0.5s;
 }
 
+.buttnLog {
+  color: #191d24 !important;
+  margin-left: 46% !important;
+}
+
+.buttnLog:hover {
+  box-shadow: 0px 0px 10px #00887a;
+  transition-duration: 0.5s;
+}
+
+
 .buttn2:hover {
   box-shadow: 0px 0px 10px #a6e3e9;
   transition-duration: 0.5s;
@@ -115,4 +126,8 @@
 
 .newbuttn2 {
   border: solid 1px #00bba7 !important;
+}
+
+.linkLogin{
+  text-decoration: none;
 }
